--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 # Site
 
 title: Base
-url: "https://orange-ape.cloudvent.net/"
+url: 
 baseurl:
 google_analytics_key:
 disqus_shortname:
 newsletter_action:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
-logo: /siteicon.png
-description: Knowledge base template for Jekyll.
+logo: 
+description: A blog from Mala Deep.
 author:
   name:
   email:
@@ -18,7 +18,7 @@ author:
 social:
   name: Base Template
   links:
-    - https://github.com/CloudCannon/base-jekyll-template
+    
 
 # -----
 # Build
