--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,10 +1,10 @@
 - name:
-  link: https://facebook.com/
+  link: https://maladeepupadhaya.me
   new_window: true
-  social_icon: Facebook
+  social_icon: website
 - name:
-  link: https://twitter.com/
-  social_icon: Twitter
+  link: http://linkedin.com/maladeep
+  social_icon: Linkedin
   new_window: true
 - name:
   link: https://youtube.com/
