--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Mala Deep
 url: http://maladeepupadhaya.me
-baseurl:
+baseurl:/mala_deep
 google_analytics_key:
 disqus_shortname:
 newsletter_action:
