--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,7 +3,7 @@
   new_window: true
   social_icon: website
 - name:
-  link: http://www.linkedin.com/maladeep
+  link: http://www.linkedin.com/in/maladeep
   social_icon: Linkedin
   new_window: true
 - name:
