--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ disqus_shortname: disqus_bDGwSo5kTq
 newsletter_action:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
-logo: 
-description: A blog from Mala Deep.
+logo: MD
+description: A blog from Mala Deep
 author:
   name:Mala Deep
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name:@ github
+  name: GitHub
   links: https://github.com/maladeep/
     
 
