--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,7 +4,7 @@
   social_icon: website
 - name:
   link: http://www.linkedin.com/in/maladeep
-  social_icon: Linkedin
+  social_icon: LinkedIn
   new_window: true
 - name:
   link: https://youtube.com/
