--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Mala Deep
 url: http://maladeepupadhaya.me
 baseurl:
 google_analytics_key:
-disqus_shortname: disqus_bDGwSo5kTq
+disqus_shortname: http-maladeepupadhaya-me
 newsletter_action:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
